nav bar complete

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear </title>
+    <!-- css file link -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome cdn link -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <div>
+                <h1>Influencer products</h1>
+            </div>
+            <ul>
+                <li>Home</li>
+                <li>Products</li>
+                <li>Sign up</li>
+                <li>Log In</li>
+                <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+        </nav>
+       
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
