added banner section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <!-- css file link -->
     <link rel="stylesheet" href="style.css">
     <!-- font awesome cdn link -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
+
 <body>
     <header>
         <nav class="nav-bar">
@@ -24,7 +26,24 @@
                 <li><i class="fa-solid fa-cart-shopping"></i></li>
             </ul>
         </nav>
-       
+        <section class="banner-section">
+            <div class="banner-left-content">
+                <h1>Start your Journey as <br> Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-1"><div class="button-container">
+                    <h4>Prebook now</h4>
+                    <div><i class="fa-solid fa-arrow-right"></i></div>
+                </div></button>
+            </div>
+            <div class="banner-right-content">
+<div class="right-item">
+
+</div>
+<div class="image-content">
+    <img src="images/main-camera.png" alt="">
+</div>
+            </div>
+        </section>
 
     </header>
     <main>
@@ -34,4 +53,5 @@
 
     </footer>
 </body>
+
 </html>
